# iss_docking_automation

./: CMakeLists.txt  README.md  package.xml  setup.py
cfg/: pid_rotation.yaml  pid_translation.yaml
cfg/control/pos/: pid_rotation.yaml  pid_translation.yaml
cfg/control/vel/: pid_rotation.yaml  pid_translation.yaml
launch/: docking_procedure.launch  pid_rotation.launch  pid_translation.launch  scenario.launch
launch/control/pos/: closed_loop.launch  mixed_loop.launch
launch/control/vel/: closed_loop.launch  mixed_loop.launch
scripts/: command_handler  corrections_applicator  error_to_tf  kalman_filter  lqr  simulator  summing_point  trajectory_planner
src/iss_docking_automation/: __init__.py  error_buffer.py  parametric_trajectory.py  state_buffer.py
