<?xml version="1.0"?>
<package format="2">
  <name>iss_docking_automation</name>
  <version>1.0.0</version>
  <description>Autonomous flight software created to control the Crew Dragon spacecraft in ISS Docking Simulator by SpaceX</description>

  <maintainer email="gotlib.adam+dev@gmail.com">Adam Gotlib</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>python-scipy</depend>
  <depend>python-pandas</depend>
  <depend>python-selenium-pip</depend>
</package>
